--- a/public/themes/admin/css/themes/all-themes.css
+++ b/public/themes/admin/css/themes/all-themes.css
@@ -1,5 +1,5 @@
 ﻿.theme-red .navbar {
-  background-color: #F44336; }
+  background-color: #2c3d4e; }
 
 .theme-red .navbar-brand {
   color: #fff; }
@@ -30,7 +30,7 @@
 .theme-red .sidebar .menu .list li.active {
   background-color: transparent; }
   .theme-red .sidebar .menu .list li.active > :first-child i, .theme-red .sidebar .menu .list li.active > :first-child span {
-    color: #F44336; }
+    color: #2c3d4e; }
 
 .theme-red .sidebar .menu .list .toggled {
   background-color: transparent; }
@@ -41,7 +41,7 @@
 .theme-red .sidebar .legal {
   background-color: #fff; }
   .theme-red .sidebar .legal .copyright a {
-    color: #F44336 !important; }
+    color: #2c3d4e !important; }
 
 .theme-pink .navbar {
   background-color: #E91E63; }
